[package]
name = "qvm-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for the quest programming language"
repository = "https://github.com/sampersand/quest2"
readme = "README.md"
keywords = ["prolang", "programming-language", "dynamic", "macros"]
license = "<not for public use currently>"
categories = ["compilers", "command-line-utilities"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

[lib]
proc-macro = true
