[package]
name = "quest"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "1.1"
hashbrown = "0.12"
radix_fmt = "1"
once_cell = "1"
qvm-macros = { path = "../macros" }
tracing = "0.1.34"


env_logger = "0.9" # only for `main`
tracing-subscriber = "0.3" # ^^^

[dev-dependencies]
assert_matches = "1.5"

[features]
