[package]
name = "quest"
version = "0.2.0"
edition = "2021"
description = "The quest programming language"
repository = "https://github.com/sampersand/quest2"
readme = "README.md"
keywords = ["prolang", "programming-language", "dynamic", "macros"]
license = "<not for public use currently>"
categories = ["compilers", "command-line-utilities"]

[dependencies]
static_assertions = "1.1"
hashbrown = "0.12"
radix_fmt = "1"
once_cell = "1"
qvm-macros = { path = "../macros" }
tracing = { version = "0.1.34", features = ["release_max_level_warn"] }

env_logger = "0.9" # only for `main`
tracing-subscriber = "0.3" # ^^^

[dev-dependencies]
assert_matches = "1.5"

[features]
unsafe-no-locking = []
